@@ -2,8 +2,8 @@
  * @test  /nodynamiccopyright/
  * @bug 8314423
  * @summary Multiple patterns without unnamed variables
- * @compile/fail/ref=T8314423.out -XDrawDiagnostics T8314423.java
- * @compile --enable-preview --source ${jdk.version} T8314423.java
+ * @compile/fail/ref=T8314423.out -XDrawDiagnostics --release 21 T8314423.java
+ * @compile T8314423.java
  */
 
 public class T8314423 {
